.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
  namespace: uiptel
  labels:
    app: admin
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: ${DIGEST_IMAGE}
        imagePullPolicy: Always
        ports:
          - containerPort: 80
