.k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: front
  namespace: uiptel
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
      - uiptel.com
    secretName: uiptel-tls-cert
  rules:
  - host: uiptel.com
    http:
      paths:
      - path: /admin(/|$)(.*)
        backend:
          serviceName: admin
          servicePort: 80
